<resources>
    <string name="app_name">그로쑥</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="storage_title">새 동굴 파기</string>
    <string name="storage_description">새로운 동굴을 만들어,\n나만의 인사이트를 마음껏 담아보세요.</string>
    <string name="storage_name">이름</string>
    <string name="storage_name_hint">동굴의 이름을 알려주세요.</string>
    <string name="storage_introduction">소개</string>
    <string name="storage_introduction_hint">동굴을 간략히 소개해주세요.</string>
    <string name="storage_open">공개하기</string>
    <string name="storage_btn">새 동굴 만들기</string>
    <string name="insight_write_title">새로운 씨앗 심기</string>
    <string name="insight_write_insight">인사이트</string>
    <string name="insight_write_insight_hint">찾아낸 새로운 가치를 한 줄로 표현해주세요</string>
    <string name="insight_write_memo">찾아낸 가치에 대한 생각을 적어보세요(선택)</string>
    <string name="tv_insight_write_memo">메모</string>
    <string name="tv_insight_write_cave">동굴</string>
    <string name="edt_insight_write_cave">어떤 동굴에 저장할까요?</string>
    <string name="tv_insight_write_url">출처</string>
    <string name="insight_write_url">출처의 정보를 입력해주세요(선택)</string>
    <string name="insight_write_url_choice">URL을 붙여넣어주세요(선택)</string>
    <string name="tv_insight_write_goal">목표 기간</string>
    <string name="insight_write_goal">1개월</string>
    <string name="tv_insight_write_goal_content">씨앗을 저장할 기간을 설정해주세요.</string>
    <string name="insight_write_warning">주의!</string>
    <string name="insight_write_warning_content">해당 기간 이후에는 씨앗이 잠금 처리 되어 볼 수 없게 돼요.\n액션 플랜 달성을 통해 획득한 쑥으로 잠금을 해제할 수 있어요.</string>
    <string name="insight_write_cave_select">선택</string>
    <string name="see_storage_title">동굴이름임다</string>
    <string name="see_storage_sub_title">동굴 설명자리에요. 글자수는 어쩌고까지</string>
    <string name="see_storage_user_nickname">생성한사람닉네임자리</string>
    <string name="see_storage_scrap">스크랩만 보기</string>
    <string name="see_storage_content">아직 심겨진 씨앗이 없어요</string>
    <string name="see_storage_btn_content">씨앗심기</string>
    <string name="detail_my_page_delete_account"><u>회원 탈퇴</u></string>
    <string name="seed_modify_title">씨앗 수정</string>
    <string name="seed_modify_btn">완료</string>
    <string name="seed_modify_url_choice">URL을 입력해주세요 (선택)</string>
    <string name="btn_insight_write_new_text">액션 만들기</string>
    <string name="insight_write_url_error">유효하지 않은 URL이에요</string>
</resources>