<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_cave_create"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <ImageButton
                android:id="@+id/btn_cave_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close"
                android:background="@android:color/transparent"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_cave_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/storage_title"
                android:layout_marginTop="68dp"
                android:layout_marginStart="18dp"
                android:textColor="@color/White000"
                android:textAppearance="@style/head1"
                android:includeFontPadding="false"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_cave_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/storage_description"
                android:layout_marginTop="16dp"
                android:textColor="@color/White000"
                android:textAppearance="@style/body2_reg"
                android:includeFontPadding="false"
                app:layout_constraintTop_toBottomOf="@id/tv_cave_title"
                app:layout_constraintStart_toStartOf="@id/tv_cave_title"/>

            <TextView
                android:id="@+id/tv_cave_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/storage_name"
                android:textColor="@color/MainGreen400"
                android:textAppearance="@style/head4"
                android:includeFontPadding="false"
                android:layout_marginTop="35dp"
                app:layout_constraintTop_toBottomOf="@id/tv_cave_description"
                app:layout_constraintStart_toStartOf="@id/tv_cave_description"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_cave_name"
                style="@style/TextInputLayoutStyle"
                app:boxBackgroundMode="outline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_cave_name"
                app:boxBackgroundColor="@color/Gray900"
                app:counterEnabled="true"
                app:counterMaxLength="7"
                app:counterTextAppearance="@style/CounterTextAppearance"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_cave_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/storage_name_hint"
                    android:textColor="@color/White000"
                    android:textColorHint="@color/Gray300"
                    android:textAppearance="@style/body3_reg"
                    android:includeFontPadding="false"
                    android:inputType="text"
                    android:maxLength="7"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_cave_introduction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/MainGreen400"
                android:textAppearance="@style/head4"
                android:text="@string/storage_introduction"
                android:layout_marginTop="8dp"
                android:layout_marginStart="18dp"
                app:layout_constraintTop_toBottomOf="@id/layout_cave_name"
                app:layout_constraintStart_toStartOf="parent"
                android:includeFontPadding="false"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_cave_introduction"
                style="@style/TextInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_cave_introduction"
                app:boxBackgroundColor="@color/Gray900"
                app:counterMaxLength="20"
                app:counterEnabled="true"
                app:counterTextAppearance="@style/CounterTextAppearance"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_cave_introduction"
                    android:layout_width="match_parent"
                    android:layout_height="68dp"
                    android:hint="@string/storage_introduction_hint"
                    android:textColor="@color/White000"
                    android:textColorHint="@color/Gray300"
                    android:textAppearance="@style/body3_reg"
                    android:includeFontPadding="false"
                    android:inputType="text"
                    android:maxLength="20"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_cave_open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/storage_open"
                android:textColor="@color/MainGreen400"
                android:textAppearance="@style/head4"
                android:includeFontPadding="false"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/layout_cave_introduction"
                app:layout_constraintStart_toStartOf="@id/layout_cave_introduction"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                app:layout_constraintTop_toBottomOf="@id/tv_cave_open"
                app:layout_constraintStart_toStartOf="parent"
                app:trackTint="@color/Gray400"
                app:thumbTint="@color/White000"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cave_create"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="18dp"
        android:layout_marginBottom="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/sel_create_new_storage_btn"
        android:enabled="false"
        android:text="@string/storage_btn"
        android:textColor="@color/sel_cave_create_btn"
        android:textAppearance="@style/body1_bold"
        android:includeFontPadding="false"
        android:paddingHorizontal="12dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>