<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_see_cave_top"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/Gray600">

        <ImageButton
            android:id="@+id/btn_cave_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            android:background="@android:color/transparent"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_see_cave_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="19dp"
            android:text="@string/see_storage_title"
            android:textColor="@color/White000"
            android:textAppearance="@style/head4"
            android:includeFontPadding="false"
            app:layout_constraintTop_toBottomOf="@id/btn_cave_close"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_see_cave_sub_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/see_storage_sub_title"
            android:textColor="@color/Gray100"
            android:textAppearance="@style/body3_reg"
            android:includeFontPadding="false"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="18dp"
            app:layout_constraintTop_toBottomOf="@id/tv_see_cave_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>



        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_see_cave_user_img"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_profile_default"
            android:layout_marginTop="16dp"
            android:layout_marginStart="18dp"
            app:layout_constraintDimensionRatio="1"
            app:shapeAppearanceOverlay="@style/Radius2"
            app:layout_constraintTop_toBottomOf="@id/tv_see_cave_sub_title"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_see_cave_user_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_storage_user_nickname"
            android:textColor="@color/Gray200"
            android:textAppearance="@style/detail2_reg"
            app:layout_constraintTop_toBottomOf="@id/tv_see_cave_sub_title"
            app:layout_constraintStart_toEndOf="@id/iv_see_cave_user_img"
            android:includeFontPadding="false"
            android:layout_marginTop="17dp"
            android:layout_marginStart="8dp"/>

        <ImageView
            android:id="@+id/iv_see_cave_is_lock_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="10dp"
            android:paddingHorizontal="12dp"
            android:paddingVertical="12dp"
            android:src="@drawable/ic_lock"
            android:clickable="true"
            app:layout_constraintTop_toBottomOf="@id/tv_see_cave_user_nickname"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <CheckBox
        android:id="@+id/chb_see_cave_scrap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="18dp"
        android:background="@null"
        android:button="@null"
        android:checked="false"
        android:drawableStart="@drawable/sel_home_scrap"
        android:drawablePadding="4dp"
        android:gravity="end|center"
        android:includeFontPadding="false"
        android:paddingStart="18dp"
        android:paddingTop="13dp"
        android:paddingBottom="14dp"
        android:text="@string/see_storage_scrap"
        android:textAppearance="@style/detail3_reg"
        android:textColor="@color/sel_home_scrap"
        app:layout_constraintTop_toBottomOf="@id/layout_see_cave_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:useMaterialThemeColors="false" />

    <ImageView
        android:id="@+id/iv_see_cave_thook_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_empty_insight"
        android:layout_marginTop="145dp"
        android:layout_marginHorizontal="133dp"
        app:layout_constraintTop_toBottomOf="@id/layout_see_cave_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_see_cave_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_storage_content"
        android:textColor="@color/Gray200"
        android:textAppearance="@style/body1_reg"
        android:includeFontPadding="false"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="92dp"
        app:layout_constraintTop_toBottomOf="@id/iv_see_cave_thook_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_see_cave_make_seed"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:textAppearance="@style/body1_bold"
        android:includeFontPadding="false"
        android:paddingHorizontal="12dp"
        android:layout_marginBottom="18dp"
        android:layout_marginHorizontal="18dp"
        android:text="@string/see_storage_btn_content"
        android:textColor="@color/White000"
        android:background="@drawable/rect_green400_fill_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>